[project]
name = "networksecurity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.6.15",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "setuptools>=80.9.0",
]
